<resources>
    <string name="app_name">Datensammlerapp</string>
    <string name="headAc">Accelometer</string>
    <string name="headGy">Gyroscope</string>
    <string name="headLo">Location</string>
    <string name="longitudinal">Longitudinal</string>
    <string name="lateral">Lateral</string>
    <string name="record">Record</string>
    <string name="headLi">Front Light</string>
    <string name="candela">Candela</string>
</resources>
